2007-08-06  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Navigation/ProjectNodeBuilderExtension.cs,
	  ProjectPad/ProjectPackagesFolderNodeBuilder.cs: Adjusted to new API
	  changes.

2007-08-03  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/CTextEditorExtension.cs: Added support for '::' completion.
	* Gui/DataProvider.cs: Changed the completion icon of a typedef to match the
	  icon used in the class pad.
	* Makefile.am, CBinding.addin.xml, CBinding.mdp,
	  templates/EmptyCSourceFile.xft.xml,
	  templates/EmptyCppSourceFile.xft.xml,
	  templates/EmptyCHeaderFile.xft.xml,
	  templates/EmptyCppHeaderFile.xft.xml: Added file templates and changed
	  icons.
	* Parser/ProjectInformation.cs: Added some helper methods.
	* Parser/Function.cs: Overrided the Equals and GetHasCode methods so that it
	  uses the function's parameters too.

2007-07-26  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Navigation/ProjectNodeBuilderExtension.cs,
	  Gui/CTextEditorExtension.cs, Project/CProject.cs,
	  Parser/Enumerator.cs, Parser/Function.cs, Parser/Enumeration.cs,
	  Parser/Union.cs, Parser/TagDatabaseManager.cs, Parser/Namespace.cs,
	  Parser/Typedef.cs, Parser/Structure.cs, Parser/LanguageItem.cs,
	  Parser/Class.cs, Parser/Member.cs: Now a file's tags are updated
	  when the file is saved. Also, instead of writing the tags to a file
	  I now write them to stdout and parse them from there since I now
	  parse per file instead of the entire project.

2007-07-25  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Navigation/ProjectNodeBuilderExtension.cs,
	  Parser/TagDatabaseManager.cs: It is now possible to update tags for
	  only one source file instead of the entire project (though it's
	  curently not in use anywhere).
	
	  When it does this it creates a tags file for the source file and
	  the included non system headers and parses that file.
	
	  I'm not sure where this code should be called.